--- a/Case Converter/task/src/index.html
+++ b/Case Converter/task/src/index.html
@@ -12,6 +12,6 @@
 <button id="upper-case" onclick="UpperCase()">Upper Case</button>
 <button id="lower-case" onclick="LowerCase()">Lower Case</button>
 <button id="proper-case" onclick="ProperCase()">Proper Case</button>
-<button id="sentence-case">Sentence Case</button>
+<button id="sentence-case" onclick="SentenceCase()">Sentence Case</button>
 </body>
 </html>
