--- a/Case Converter/The converter/task.html
+++ b/Case Converter/The converter/task.html
@@ -1,8 +1,8 @@
-<h5 id="description">Description</h5>
+<h5 id="description" id="description">Description</h5>
 
 <p>You need to write a long piece of text. Suddenly, it turned out that it has to be in the upper case. Do you really need to rewrite the entire text? Of course not. Let's create a tool that automatically changes the case. Let's start with implementing the first HTML elements.</p>
 
-<h5 id="objectives">Objectives</h5>
+<h5 id="objectives" id="objectives">Objectives</h5>
 
 <p>In this stage, your web page should contain the following HTML elements:</p>
 
@@ -17,7 +17,7 @@
 
 <p>We will implement the functionality behind the buttons in the next stages.</p>
 
-<h5 id="example">Example</h5>
+<h5 id="example" id="example">Example</h5>
 
 <p><strong>Example 1:</strong><em> an example of your app</em></p>
 
