--- a/Case Converter/task/src/index.html
+++ b/Case Converter/task/src/index.html
@@ -13,5 +13,6 @@
 <button id="lower-case" onclick="LowerCase()">Lower Case</button>
 <button id="proper-case" onclick="ProperCase()">Proper Case</button>
 <button id="sentence-case" onclick="SentenceCase()">Sentence Case</button>
+<button id="save-text-file" onclick="download1()">Save Text File</button>
 </body>
 </html>
