--- a/Case Converter/Save me/task.html
+++ b/Case Converter/Save me/task.html
@@ -1,12 +1,12 @@
-<h5 id="description">Description</h5>
+<h5 id="description" id="description">Description</h5>
 
 <p>You can convert the text into different cases, excellent! Now let's add the ability to save the changed text as a <code class="language-javascript">.txt</code> file!</p>
 
-<h5 id="objectives">Objectives</h5>
+<h5 id="objectives" id="objectives">Objectives</h5>
 
 <p>Add one more button to the page. Assign the <code class="language-javascript">save-text-file</code> id to it. Add another event handler for the button.</p>
 
-<p>When the button is clicked, you should get the text in the <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/textarea" rel="noopener noreferrer nofollow">textarea element </a>and generate the <code class="language-javascript">text.txt</code> file.  The resulting file should contain the text from the <code class="language-javascript">textarea</code> element.</p>
+<p>When the button is clicked, you should get the text in the <a target="_blank" target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/textarea" rel="noopener noreferrer nofollow">textarea element </a>and generate the <code class="language-javascript">text.txt</code> file.  The resulting file should contain the text from the <code class="language-javascript">textarea</code> element.</p>
 
 <p>Here is a code snippet that shows how you can implement it:</p>
 
@@ -27,7 +27,7 @@
 download("hello.txt","This is the content of my file :)");
 </code></pre>
 
-<h5 id="example">Example</h5>
+<h5 id="example" id="example">Example</h5>
 
 <p><strong>Example 1: </strong><em>an example of your app</em></p>
 
