--- a/Case Converter/Upper or lower/task.html
+++ b/Case Converter/Upper or lower/task.html
@@ -1,4 +1,4 @@
-<h5 id="description">Description</h5>
+<h5 id="description" id="description">Description</h5>
 
 <p>Let's work with the text in the <code class="java">textarea</code> element. In this stage, we will add some handlers for buttons.</p>
 
@@ -11,9 +11,9 @@
 	<li>The sentence case is the case when each sentence starts with an upper case letter, and the rest of the sentence is in the lower case. In example, <code class="java">This is the sentence case. Only the first word of the sentence starts with an upper case letter.</code></li>
 </ul>
 
-<p>This stage requires knowledge of various string methods. You can take a look at the <a target="_blank" href="https://www.w3schools.com/js/js_string_methods.asp" rel="noopener noreferrer nofollow">W<sup>3</sup> Schools Tutorial</a>. Consider using the <code class="java">join()</code> method.</p>
+<p>This stage requires knowledge of various string methods. You can take a look at the <a target="_blank" target="_blank" href="https://www.w3schools.com/js/js_string_methods.asp" rel="noopener noreferrer nofollow">W<sup>3</sup> Schools Tutorial</a>. Consider using the <code class="java">join()</code> method.</p>
 
-<h5 id="objectives">Objectives</h5>
+<h5 id="objectives" id="objectives">Objectives</h5>
 
 <p>Your web page should contain all elements from the previous stage.</p>
 
@@ -26,7 +26,7 @@
 	<li>If the <code class="java">sentence-case</code> button is pressed, convert the text in <code class="java">textarea</code> to the sentence case.</li>
 </ul>
 
-<h5 id="example">Example</h5>
+<h5 id="example" id="example">Example</h5>
 
 <p><strong>Example 1: </strong><em>an example of your app</em></p>
 
