--- a/Topics/Overview of the basic program/Theory/task.html
+++ b/Topics/Overview of the basic program/Theory/task.html
@@ -3,19 +3,19 @@
  <head></head>
  <body>
   <p>In this topic, you will learn how to develop your first JS script. These programs are quite simple yet functional, so they do a good job showing that programming in JavaScript is easy and enjoyable. However, there are caveats and difficulties everywhere, so we will also look at some common programming errors and how to avoid them.</p> 
-  <h5 style="text-align: center;">Hello, World!</h5> 
+  <h5 style="text-align: center;" id="hello-world">Hello, World!</h5> 
   <p>When learning any programming language, it is a kind of a tradition to start with writing a program that displays a message <code class="language-javascript">"Hello, World!"</code> on the screen or on another device. And who are we to break traditions?</p> 
   <pre><code class="language-javascript">console.log("Hello, World!");</code></pre> 
   <p>You may <a target="_blank" href="https://repl.it/languages/javascript" rel="nofollow noopener noreferrer">run</a> this code: just copy it and click on the triangle. You should get this result:</p> 
   <pre><code class="language-no-highlight">Hello, World!</code></pre> 
   <p>As you can see, the script consists of one line and simply prints the text passed in brackets. Note that the quotes are also ignored when outputting the result. This code is very simple but deserves a detailed review.</p> 
-  <h5 style="text-align: center;">Explanation</h5> 
+  <h5 style="text-align: center;" id="explanation">Explanation</h5> 
   <p>Here <code class="language-javascript">console.log</code> is a function. A<strong> function</strong> is a block of code that performs useful work for you, such as printing text. In a way, a function is a subroutine that can be reused in your programs. When a function name is followed by parentheses, it means that it has been <strong>called</strong> to get the result. <code class="language-javascript">console.log</code> allows you to output information to the console, so this function is often used to find errors in the code.</p> 
   <p>Moving on. <code class="language-javascript">"Hello, World!"</code> is a <strong>string</strong>. All strings in JavaScript are enclosed in single or double quotes, so <code class="language-javascript">'Hello, World!'</code> would also be a valid string. See for yourself – try to run the following code:</p> 
   <pre><code class="language-javascript">console.log('JavaScript');</code></pre> 
   <p>The program will print:</p> 
   <pre><code class="language-no-highlight">JavaScript</code></pre> 
-  <h5 style="text-align: center;">Printing quotes</h5> 
+  <h5 style="text-align: center;" id="printing-quotes">Printing quotes</h5> 
   <p>If you want to include quotes in a string, there are two ways to avoid confusion and successfully print them:</p> 
   <ul> 
    <li>You can quote this line in other types of quotes, for example:</li> 
@@ -28,7 +28,7 @@
   <p>The result of both will be as follows:</p> 
   <pre><code class="language-no-highlight">Yes, I'm ready to learn JS.</code></pre> 
   <p>It'll work with other types of quotation marks, too. You can try <a target="_blank" href="https://repl.it/languages/javascript" rel="noopener noreferrer nofollow">running</a> all the examples to better familiarize yourself with JS.</p> 
-  <h5 style="text-align: center;">Possible errors</h5> 
+  <h5 style="text-align: center;" id="possible-errors">Possible errors</h5> 
   <p>Errors happen even in simple code lines. The most common errors are:</p> 
   <ul> 
    <li><strong>misprints</strong></li> 
