--- a/Topics/Strings and numbers/Theory/task.html
+++ b/Topics/Strings and numbers/Theory/task.html
@@ -1,11 +1,11 @@
-<h2>Strings and numbers</h2>
+<h2>Strings and Numbers</h2>
 <html>
  <head></head>
  <body>
   <p>Any information you want to use in scripts has its own type. This<strong> type</strong> describes how to store data in memory and what operations apply to it.</p> 
   <p>Let's draw an analogy: types can be represented by animal species or any other abstract attributes designed to group objects by some common feature. All the kittens and tomcats that you see are of the type <em>cats</em>, but each of them is a separate object. Thinking of cats as a type, you can assume some available operations, for example, a cat can purr.</p> 
   <p>In this topic, we will consider two simple data types which are often used in programming.</p> 
-  <h5 style="text-align: center;">Strings</h5> 
+  <h5 style="text-align: center;" id="strings">Strings</h5> 
   <p>When working with textual information in your program, you will have to use <strong>strings</strong>. This type of data is extremely common in JavaScript. Strings are written in single or double quotes.</p> 
   <ul> 
    <li>Examples of strings in double quotes:</li> 
@@ -24,7 +24,7 @@ console.log('1234'); // a sequence of digits</code></pre>
   </div>
   <p></p> 
   <p>As you can see, strings are very easy to use!</p> 
-  <h5 style="text-align: center;">Numbers</h5> 
+  <h5 style="text-align: center;" id="numbers">Numbers</h5> 
   <p><strong>Numbers</strong> are the most important thing for any programmer. You will hardly be able to write a serious program without numbers, so let's see how to output a number to the console:</p> 
   <pre><code class="language-javascript">console.log(12);
 console.log(0); 
@@ -32,7 +32,7 @@ console.log(-11);
 console.log(-1.04);</code></pre> 
   <p>You can use positive, negative numbers, and zeros. There are no additional difficulties in recording floating-point numbers.</p> 
   <p>Integer numbers can be used to count physical objects, while floating-point numbers are a good choice for statistical and scientific calculations.</p> 
-  <h5 style="text-align: center;"><em>typeof</em> operator</h5> 
+  <h5 style="text-align: center;" id="emtypeofem-operator"><em>typeof</em> operator</h5> 
   <p>We can easily recognize the data type using the <code class="language-javascript">typeof</code> operator. Let's look at two examples to see how to output the data type to the console.</p> 
   <p>There are two ways to write this operator.</p> 
   <ul> 
